--- a/stylesheet.css
+++ b/stylesheet.css
@@ -106,6 +106,11 @@ footer {
 	margin: 0 0 10px 0;
 }
 
+.warning {
+	font-size: small;
+	color: #880000;
+}
+
 .uppercase {
 	text-transform: uppercase;
 }
