--- a/plugin/problem_report/print.css
+++ b/plugin/problem_report/print.css
@@ -50,7 +50,7 @@ footer {
 	border: 0;
 }
 
-td {
+#view_ok td {
 	border: 1px solid #888;
 	padding: 4px;
 	border-radius: 3px;
@@ -79,4 +79,28 @@ pre {
 	font-family: monospace;
 	font-size: 80%;
 	font-weight: normal;
+}
+
+#list_view_ok a img {
+	display: none;
+}
+
+#list_view_ok table {
+	border: 1px solid #aaa;
+	border-collapse: collapse;
+	box-shadow: 3px 3px 0 #ccc;
+	margin: 20px auto;
+}
+
+#list_view_ok th {
+	font-weight: bold;
+	background: #eee !important;
+	box-shadow: inset 0 0 0 1000px #eee;
+	border: 1px solid #aaa;
+	padding: 4px;
+}
+
+#list_view_ok td {
+	border: 1px solid #aaa;
+	padding: 4px;
 }
